crates/aes_semantic/src/snapshots/aes_semantic__verify__tests__relation_operations__intersection_in_relation_emits_error.snap
---
source: crates/aes_semantic/src/verify.rs
expression: "aes_testing::render_diagnostics(source, &reporter.diagnostics)"
---
aes::semantic(binary_op_in_relation)

  × only union (`|`) is allowed in `let` relations
   ╭─[test.aes:4:16]
 3 │ type user {
 4 │   let member = user & approved;
   ·                ───────┬───────
   ·                       ╰── `&` is not allowed here
 5 │ }
   ╰────
  help: `let` defines stored relations as a union of subject types — use `def` for computed permissions with `&` or `-`
